--- a/index.html
+++ b/index.html
@@ -5,38 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <meta name="author" content="Marin Bogdan">
-    <meta name="keywords" content="shirt, jacket, ">
+    <meta name="keywords" content="buildings, properties, home, tech homes ">
     <meta name="description" content="Find our new collection of clothes">
     <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/ios/50/000000/constructing.png">
     <title>Simple Properties</title>
+    <link rel="stylesheet" href="./app/css/reset_styles.css" type="text/css">
     <link rel="stylesheet" href="./app/css/home.css" type="text/css">
+    <link rel="stylesheet" href="./app/css/nav-bar.css" type="text/css">
 </head>
 <body>
 
-<header id="header">
-    <h1>Simple Properties</h1>
-    <nav>
-        <ul>
-            <li>
-                <a href="#">Home</a>
-                <ul>
-                    <li><a href="#aboutSection">About</a></li>
-                    <li><a href="#buyHomeSection">Buy from us</a></li>
+<header class="header">
 
-                </ul>
-
+    <nav class="nav-bar">
+        <ul class="nav-list">
+            <li class="nav-menu">
+                <a href="">Simple Properties</a>
             </li>
-            <li>
-                <a href="app/html/about.html">Your home</a>
+            <li class="nav-menu">
+                <div class="nav-item">
+                    <a href="#">Home</a>
+                </div>
+                <ul class="nav-submenu">
 
-                <ul>
-                    <li>Hire a designer</li>
-                    <li>Get furniture</li>
-                    <li>Clean energy</li>
+                    <li class="nav-item nav-item-submenu"><a href="#aboutSection">About</a></li>
+                    <li class="nav-item nav-item-submenu"><a href="#buyHomeSection">Buy from us</a></li>
                 </ul>
             </li>
-            <li>
-                <a href="app/html/contact.html">Be an investor</a>
+            <li class="nav-menu">
+                <div class="nav-item">
+                    <a href="app/html/about.html">Your home</a>
+
+                </div>
+                <ul class="nav-submenu">
+                    <li class="nav-item nav-item-submenu">
+                        <a href="">
+                            Hire a designer
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item-submenu">
+                        <a href="">
+                            Get furniture
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item-submenu">
+                        <a href="">
+                            Clean energy
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-menu">
+                <div class="nav-item">
+                    <a href="app/html/contact.html">Be an investor</a>
+                </div>
             </li>
         </ul>
     </nav>
@@ -44,6 +66,35 @@
 
 <main>
     <div id="container">
+        <section id="introductory-video">
+            <video id="jumbotron-video" muted autoplay playsinline loop preload="metadata"
+                   style="object-fit: cover !important; height: 100%; width: 100%">
+                <source src="https://www.one.ro/media/1000-oup-intro.mp4?v=1634210933&r=20211014" type="video/mp4">
+                <source src="https://www.one.ro/media/1000-oup-intro.webm?v=1634210933&r=20211014" type="video/webm">
+            </video>
+        </section>
+        <div class="empty-space"></div>
+
+        <section id="tabel">
+            <table>
+                <tr>
+                    <th>Location</th>
+                    <th>Building type</th>
+                    <th>Constructed</th>
+                </tr>
+                <tr>
+                    <td>Cotroceni</td>
+                    <td>Residential</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>Lake</td>
+                    <td>Residential</td>
+                    <td>No</td>
+                </tr>
+            </table>
+        </section>
+
         <section id="about">
             <h2 id="aboutSection">About us</h2>
             <p>Simple Properties is one of the <b>largest</b> and most <b>successful</b> green developers of
@@ -55,21 +106,25 @@
                 fields.</p>
             <aside>
                 <p>
-
-                    Simple Properties has officially entered in the most <em>exclusives club</em> of "Luxurious Homes in
+                    Simple Properties has officially entered in the most <em>exclusives club</em> of "Luxurious
+                    Homes in
                     Europe"
                 </p>
-                <iframe src="https://wealthygorilla.com/most-expensive-houses/" name="ifr">
 
+                <div id="iframe_container">
+                    <iframe src="https://wealthygorilla.com/most-expensive-houses/" name="ifr">
+                    </iframe>
+                    <div id="iframe_butoane">
 
-                </iframe>
-                <a target="ifr" href="https://www.youtube.com/watch?v=0MV--Ogj6BM&ab_channel=Sky-LineProperties">House
-                    one</a>
-                <a target="ifr" href="https://www.youtube.com/watch?v=GJHkP7EvW94&ab_channel=laminatparchet">House
-                    two</a>
+                        <a target="ifr" href="https://www.youtube.com/embed/0MV--Ogj6BM">House
+                            one</a>
+                        <a target="ifr" href="https://www.youtube.com/embed/0MV--Ogj6BM">EXEMPLU</a>
+                        <a target="ifr" href="https://www.youtube.com/watch?v=GJHkP7EvW94&ab_channel=laminatparchet">House
+                            two</a>
+                    </div>
+                </div>
 
             </aside>
-
         </section>
 
         <section id="buy">
@@ -114,7 +169,23 @@
 
         </section>
 
-        <section id="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum earum fuga iusto
+        <section id="lorem4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum earum fuga iusto
+            labore, nisi quae reiciendis sed sequi sit voluptatem! Harum laudantium neque quaerat repellendus ullam unde
+            vero.
+        </section>
+        <section id="lorem5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum earum fuga iusto
+            labore, nisi quae reiciendis sed sequi sit voluptatem! Harum laudantium neque quaerat repellendus ullam unde
+            vero.
+        </section>
+        <section id="lorem6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum earum fuga iusto
+            labore, nisi quae reiciendis sed sequi sit voluptatem! Harum laudantium neque quaerat repellendus ullam unde
+            vero.
+        </section>
+        <section id="lorem7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum earum fuga iusto
+            labore, nisi quae reiciendis sed sequi sit voluptatem! Harum laudantium neque quaerat repellendus ullam unde
+            vero.
+        </section>
+        <section id="lorem8">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum earum fuga iusto
             labore, nisi quae reiciendis sed sequi sit voluptatem! Harum laudantium neque quaerat repellendus ullam unde
             vero.
         </section>
@@ -124,7 +195,8 @@
 
 <footer>
     <a href="#header">Go up</a>
-    <a href="https://docs.google.com/document/d/1q0FHbTivGG48YJo75gg_5e1QoMOjoCHP1zbDrLlfXjc/edit?usp=sharing">Go to
+    <a target="_blank"
+       href="https://docs.google.com/document/d/1q0FHbTivGG48YJo75gg_5e1QoMOjoCHP1zbDrLlfXjc/edit?usp=sharing">Go to
         doc</a>
     <address>
         Phone: <a href="tel:+40712345678">+407 123 456 78</a>
